--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -35,6 +35,27 @@ body {
     -webkit-font-smoothing: antialiased;
     line-height: 1.5em;
 }
+h1, h2, h3, h4 {
+  font-family: SourceSansProBold, sans-serif;
+  font-weight: 700;
+}
+h1, h2, h3, h4, h5, h6 {
+  letter-spacing: 0;
+  word-break: break-word;
+}
+h1 {
+  font-size: 56px;
+  line-height: 62px;
+}
+h1+*, h2+*, h3+*, h4+*, h5+*, h6+* {
+  margin-top: 20px;
+}
+p {
+    font-size: 20px;
+    line-height: 1.5em;
+    margin-bottom: 0;
+    word-break: break-word;
+}
 a:not(.no-hover) {
     cursor: pointer;
 }
@@ -67,7 +88,7 @@ ol,ul {
     top: 0;
     width: 100%;
     background: #ffffff;
-    z-index: 9999; 
+    z-index: 9999;
     box-shadow: 0 6px 20px 0 rgba(60,63,64,0.07);
 }
 .header-inner {
@@ -79,19 +100,35 @@ ol,ul {
 .moblie-toggle-btn {
     display: none;
 }
-.sr-only {
-	position: absolute;
-	clip: rect(1px,1px,1px,1px);
-	left: -9999px;
-	top: -9999px;
+.circle {
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
-.no-btn {
-	border: 0;
-	background: 0 0;
-	cursor: pointer;
-	padding: 0;
-    width: auto;
-    outline: none;
+.line {
+  position: absolute;
+  height: 3px;
+  width: 30px;
+  background-color: #3C3F40;
+  border-radius:4px;
+  transition: all cubic-bezier(0.26, 0.1, 0.27, 1.55) 0.35s;
+}
+.top {
+   top: 2px;
+}
+.middle {
+  top: 10px;
+}
+.bottom {
+  top: 18px;
+}
+.icon.close .top {
+  transform: rotate(45deg);
+  top: 10px;
+}
+.icon.close .middle, .icon.close .bottom {
+  transform: rotate(-45deg);
+  top: 10px;
 }
 .header-window-logo {
     position: relative;
@@ -116,34 +153,86 @@ ol,ul {
 .cntctnmbr {
     margin: 0 0 0 auto;
 }
-.ray-button-compact {
-    padding: 6px 15px;
-    line-height: 1.5em;
-    height: auto;
+.pb-button-default:hover {
+    color: #26292c;
+    background-color: #f4f4f4;
 }
-.ray-button-primary {
-    background: #FF3465;
+.pb-button--xl {
     color: #fff;
-}
-.ray-button-primary:hover {
-    color: #FF3465;
-    background-color: #fff;
-}
-.ray-button {
-    font-family: inherit;
+    background: #08a742;
     font-weight: 700;
-    font-size: 20px;
-    display: inline-block;
-    cursor: pointer;
-    text-align: center;
-    border:1px #FF3465;
-    white-space: nowrap;
-    box-shadow: 0 6px 20px 0 rgba(0,0,0,0.2);
-    border-radius: 100px;
 }
-
+button.video-play-button {
+    display: flex;
+}
+.video-play-button {
+  align-items: center;
+  justify-content: center;
+}
+.pb-button-default {
+  background: transparent;
+  color: #26292c;
+  box-shadow: inset 0 0 0 3px #26292c;
+  font-weight: 700;
+}
+.pb-button, .pb-button--xl {
+    display: inline-block;
+    font-family: SourceSansProBold, sans-serif;
+    padding: 11px 20px;
+    text-align: center;
+    outline: none;
+    transition: all .25s ease-in-out;
+    border: 0;
+    border-radius: 2px;
+    cursor: pointer;
+    vertical-align: middle;
+    min-width: 86px;
+    white-space: nowrap;
+    font-size: 24px;
+    line-height: 1.4em;
+}
+.pb-button-lg, .pb-button-small {
+  padding: 6px 15px;
+  font-size: 20px;
+}
+.video-play-button_icon {
+  width: 21px;
+  height: 26px;
+  margin-right: 10px;
+  background: url(../img/play.svg);
+}
+#home-mid{
+  padding-top: 88px;
+}
+.home-banner {
+  padding-top: 40px;
+  padding-bottom: 80px;
+}
+.home-banner .ray-grid {
+  position: relative;
+}
+.ray-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 80px;
+    align-items: center;
+}
+.hero-two-columns_buttons_wrapper {
+  display: grid;
+  grid-template-columns: min-content min-content;
+  grid-gap: 20px;
+  margin: 40px 0 20px;
+}
+.hero-two-columns-animation {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+}
+.intro-animation-img {
+    height: 339px;
+}
 @media (min-width: 1195px) {
-    .header-wrapper {
+    .page-wrapper {
         margin: 0 auto;
         padding: 0 60px;
         width: 100%;
@@ -155,8 +244,7 @@ ol,ul {
         width: 30px;
         height: 30px;
         margin-right: 10px;
-        display: flex;
-        align-items: center;
+        display: block;
         position: relative;
         z-index: 999999;
     }
@@ -208,8 +296,16 @@ ol,ul {
         padding: 5px 10px;
     }
 }
+@media (max-width: 1194px) and (min-width: 600px) {
+  .page-wrapper {
+    width: 100%;
+    max-width: 100%;
+    margin: 0px auto;
+    padding: 0px 48px;
+  }
+}
 @media (max-width: 599px) {
-    .header-wrapper {
+    .page-wrapper {
         margin: auto;
         padding: 0 16px;
         width: 100%;
@@ -224,5 +320,8 @@ ol,ul {
     .logo-animation {
         width: 130px;
         height: auto;
+    }
+    #home-mid{
+      padding-top: 72px;
     }
 }
